<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_outline_home_24"
        android:title="@string/main" />

    <item
        android:id="@+id/catalogFragment"
        android:icon="@drawable/ic_baseline_receipt_24"
        android:title="@string/catalog" />

    <item
        android:id="@+id/bascetFragment"
        android:icon="@drawable/ic_outline_shopping_basket_24"
        android:title="@string/basket" />

    <item
       android:id="@+id/orderFragment"
       android:icon="@drawable/ic_outline_check_box_24"
       android:title="@string/orders"/>

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_outline_person_outline_24"
        android:title="@string/profile"/>

</menu>