<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="24dp"
    >

    <ImageView
        android:id="@+id/img_Basket_Product"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/img_product1"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/Tv_Product_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="Название продукта"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_Basket_Product"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Tv_Product_Status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/product_status1"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/img_Basket_Product"
        app:layout_constraintTop_toTopOf="@+id/Tv_Product_Name" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/product_price1"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Tv_Product_Status" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_minus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="246dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_baseline_remove_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_product_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="293dp"
        android:layout_marginTop="56dp"
        android:text="@string/amount1"
        android:textColor="@color/black"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_plus"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginStart="324dp"
        android:background="@drawable/ic_baseline_add_circle_outline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_remove"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="288dp"
        android:background="@drawable/ic_baseline_delete"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>